php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44028 stream_socket_enable_crypto segmentation faults when crypto type is missing
Submitted: 2008-02-03 03:43 UTC Modified: 2008-02-03 16:18 UTC
From: mlemos at acm dot org Assigned:
Status: Closed Package: Sockets related
PHP Version: 5.2.5 OS: Any
Private report: No CVE-ID: None
 [2008-02-03 03:43 UTC] mlemos at acm dot org
Description:
------------
When calling the enable argument of stream_socket_enable_crypto is true, I the crypto type argument is not really optional, as the documentation suggests.

So, I supposed if you call stream_socket_enable_crypto with enable argument true and omit crypto_type, it would assume you want to enable client SSL/TLS negotiation, but instead PHP crashes.

Reproduce code:
---------------
stream_socket_enable_crypto($socket, true);

Expected result:
----------------
Fail warning the user that the crypto_type must be specified.

Actual result:
--------------
Segmentation fault .,

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-02-03 16:18 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 02:00:01 2026 UTC