Fixed bug #44028 (crash inside stream_socket_enable_crypto() when enabling encryption without crypto type)